--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -14,6 +17,7 @@ body {
 }
 
 input, button {
+    display: inline-block;
     width: 100%;
     padding: 10px;
     margin-top: 10px;
