--- a/app/templates/imc-form.html
+++ b/app/templates/imc-form.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h2>Calculateur d'IMC</h2>
-        <form method="post">
+        <form method="POST">
             <label for="poids">Poids (kg) :</label>
             <input type="number" name="poids" required>
             <br><br>
@@ -17,9 +17,21 @@
             <input type="number" name="taille" step="0.01" required>
             <button type="submit">Calculer</button>
         </form>
+        
         {% if imc %}
             <p>Votre IMC est : <strong>{{ imc }}</strong></p>
-        {% endif %}
+            <p>
+                {% if imc < 18.5 %}
+                    Vous êtes en sous-poids.
+                {% elif 18.5 <= imc < 25 %}
+                    Votre poids est normal.
+                {% elif 25 <= imc < 30 %}
+                    Vous êtes en surpoids.
+                {% else %}
+                    Vous êtes obèse.
+                {% endif %}
+            </p>
+        {% endif %}  
     </div>
 </body>
 </html>
