--- a/app/templates/imc-form.html
+++ b/app/templates/imc-form.html
@@ -25,5 +25,9 @@
                 {% endif %}
             </p>
         {% endif %}  
+        
+        {% if not session['user_id'] %}
+        <p><a href="{{ url_for('auth.login') }}">Connectez-vous</a> pour suivre votre historique d'IMC.</p>
+        {% endif %}  
     </div>
 {% endblock %}
