--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,12 +9,13 @@
 <body>
     <nav>
         <ul>
+            <li><a href="{{ url_for('main.home') }}">Accueil</a></li>
             {% if not session['user_id'] %}
             <li><a href="{{ url_for('auth.login') }}">Connexion</a></li>
-            <li><a href="{{ url_for('auth.register') }}">Inscription</a></li>
             {% else %}
             <li><a href="{{ url_for('profile.profile') }}">Profil</a></li>
             <li><a href="{{ url_for('profile.history') }}">Historique</a></li>
+            <li><a href="{{ url_for('auth.logout') }}">Accueil</a></li>
             {% endif %}
         </ul>
     </nav>
