--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -11,5 +11,6 @@
         <input type="password" name="password" placeholder="Mot de passe" required>
         <button type="submit">S'inscrire</button>
     </form>
+    <p>Vous avez déjà un compte ? <a href="{{ url_for('auth.login') }}">Connectez-vous</a>.</p>
 </div>
 {% endblock %}
