--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -16,6 +16,28 @@ body {
     border-radius: 10px;
 }
 
+nav {
+    background: #333;
+    padding: 10px;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 input, button {
     display: inline-block;
     width: 100%;
