--- a/app/templates/imc-form.html
+++ b/app/templates/imc-form.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcul de l'IMC</title>
-    <link rel="stylesheet" href="static/css/style.css">
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     <div class="container">
         <h2>Calculateur d'IMC</h2>
         <form method="POST">
@@ -17,7 +10,7 @@
             <input type="number" name="taille" step="0.01" required>
             <button type="submit">Calculer</button>
             <a href="/logout" class="logout-button">Déconnexion</a>
-            <a href="/profile" class="profile-button">Mon Profil</a>
+            <a href="{{ url_for('profile.profile') }}" class="profile-button">Mon Profil</a>
         </form>
         
         {% if imc %}
@@ -35,5 +28,4 @@
             </p>
         {% endif %}  
     </div>
-</body>
-</html>
+{% endblock %}
