--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -6,7 +6,7 @@
         <p style="color: red;">{{ error }}</p>
     {% endif %}
     <form action="{{ url_for('auth.register') }}" method="POST">
-        <input type="text" name="name" placeholder="Nom" required>
+        <input type="text" name="display_name" placeholder="Nom" required>
         <input type="email" name="email" placeholder="Email" required>
         <input type="password" name="password" placeholder="Mot de passe" required>
         <button type="submit">S'inscrire</button>
