Refractoring du code et navigation dans les vues

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
             {% else %}
             <li><a href="{{ url_for('profile.profile') }}">Profil</a></li>
             <li><a href="{{ url_for('profile.history') }}">Historique</a></li>
-            <li><a href="{{ url_for('auth.logout') }}">Accueil</a></li>
+            <li><a href="{{ url_for('auth.logout') }}">Deconnexion</a></li>
             {% endif %}
         </ul>
     </nav>
